# ShaderView

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  example.glsl  frames.glsl  init.cc  init.hh  main.cc  main.hh  make.sh  path.glsl  reload.cc  reload.hh  util.cc  util.hh
src/: basicRead.hh  camera.hh  capture.hh  cubemap.cc  cubemap.hh  debug.cc  debug.hh  init.cc  main.cc  mesh.cc  mesh.hh  native.hh  pathTracing.cc  pathTracing.hh  profile.cc  profile.hh  reload.cc  scale.cc  scale.hh  shader_loader.cc  shader_loader.hh  util.cc  util.hh  window.cc  window.hh
src/x11/: reparent.cc
